2015-02-08

	* Protocol-v3.html: Typo fixes, thanks to Hannes Mehnert
	<hannes@mehnert.org> and Nadim Kobeissi <nadim@nadim.computer>
	for the reports.

2014-12-18

	* Protocol-v3.html: Remove "sender_instance, receiver_instance,"
	from description of v2 fragmentation and clarify that you can't
	fragment a fragment.  Thanks to Hannes Mehnert
	<hannes@mehnert.org> for the report.

	* Protocol-v3.html: Remove a stray "DRAFT" from the <title> tag.

	* Protocol-v2.html:
	* Protocol-v3.html: Clarify the DSA computation in the protocol
	specs.  Thanks to Adam Langley <agl@imperialviolet.org> and
	Hannes Mehnert <hannes@mehnert.org> for the report.

2014-11-29

	* README:
	* Makefile.am:
	* configure.ac:
	* tests/*: Brand new testsuite, thanks to
	David Goulet <dgoulet@ev0ke.net> and
	Julien Voisin <julien.voisin@dustri.org>.
	"make check" to run it.

2014-11-11

	* b64.c (otrl_base64_otr_encode): In case some future code path
	tries to call otrl_base64_otr_encode with a buffer more than
	3/4 the size of all addressable memory, return NULL rather than
	causing an integer overflow and a heap overrun.  Thanks to
	David Remahl <david@remahl.se> for the report.
	* proto.c (otrl_proto_create_data): Tiny refactor to call
	otrl_base64_otr_encode instead of duplicating the code here.

2014-10-18

	* README:
	* configure.ac:
	* src/version.h: Bump version number to 4.1.0

2014-10-18

	* Protocol-v3.html: Correctly count the number of actions an OTR
	client must handle.  Thanks to Fred Yontz <fred@ridersite.org>
	for the report.

2014-10-13

	* src/context.h: Add API functions
	otrl_context_find_recent_instance and
	otrl_context_find_recent_secure_instance.

2014-10-13

	* src/context.c (otrl_context_forget): Correct check for
	children contexts' state being OTRL_MSGSTATE_PLAINTEXT.  Thanks
	to k007k <k007k@wp.pl> for the report.

2014-10-13

	* src/message.c (otrl_message_receiving): Fix memory leak in
	fragment reassembly.  Thanks to Matthew D. Green